--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -29,8 +29,8 @@
     "pleaseSelectTheModeOfVerification": "Please select the mode of verification",
     "pleaseSelectTheModeOfVerification-Ar": "Please select the mode of verification-ar",
     "pleaseEnterYour": "Please enter your",
-    "MrnId": "MRN id",
-    "MrnId-Ar": "MRN id-ar",
+    "MrnId": "MRN No",
+    "MrnId-Ar": "MRN No-ar",
     "submit": "Submit",
     "submit-Ar": "Submit-ar",
     "pleaseEnterYour-Ar": "Please enter your-ar",
